--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,13 @@ spring.application.name=video-streaming-spring
 
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/video_db
-spring.datasource.username=springvideo
-spring.datasource.password=springvideo
+spring.datasource.username=root
+spring.datasource.password=Pavan@123
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 
-spring.jpa.hinernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
