--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
+
+
+#Maximum file size allowed for a single file upload
+spring.servlet.multipart.max-file-size=2000MB
+
+#Maximum request size allowed for multipart/form-data requests
+spring.servlet.multipart.max-request-size=2000MB
+
+
+files.video = videos/
