Updated properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,10 @@ spring.servlet.multipart.max-file-size=2000MB
 #Maximum request size allowed for multipart/form-data requests
 spring.servlet.multipart.max-request-size=2000MB
 
+spring.main.banner-mode=off
+logging.level.root=WARN
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
 
 files.video = videos/
 cors.allowed.origins=http://localhost:4200
