Creating HSL folder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,5 @@ logging.level.org.hibernate=ERROR
 
 files.video = videos/
 cors.allowed.origins=http://localhost:4200
+
+files.video.hsl=videos_hsl/
