Using ffmpeg to transcode videos for hls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,4 @@ logging.level.org.hibernate=ERROR
 files.video = videos/
 cors.allowed.origins=http://localhost:4200
 
-files.video.hsl=videos_hsl/
+files.video.hls=videos_hls/
